[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/splash/Splash_manager.gd" type="Script" id=1]
[ext_resource path="res://UX/mawheto_logo.png" type="Texture" id=2]
[ext_resource path="res://Font/Candal.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/splash/SkipSplash.gd" type="Script" id=4]
[ext_resource path="res://Assets/SFX/splash_sfx.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 43
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Splash0" type="Node"]

script = ExtResource( 1 )

[node name="splash1" type="MarginContainer" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="splash1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 480.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="splash1/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 106.0
margin_right = 436.0
margin_bottom = 613.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="splash1/CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="splash1/CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 450.0
margin_right = 400.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Mawheto Studio"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="splash2" type="MarginContainer" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="splash2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 480.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="splash2/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = 331.0
margin_right = 346.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="splash2/CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 221.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "TicTacToe"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="SkipSplash" type="Node" parent="." index="3"]

script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]


